--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.wayriad.foodfrisbee">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,15 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:label="Running">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
+                <action android:name="vnd.google.fitness.TRACK" />
+                <data android:mimeType="vnd.google.fitness.activity/running"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".Running">
+            <!--<intent-filter>-->
+                <!--<action android:name="vnd.google.fitness.TRACK" />-->
+                <!--<data android:mimeType="vnd.google.fitness.activity/running"/>-->
+            <!--</intent-filter>-->
+        </activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
